--- a/docker-compose-example.yaml
+++ b/docker-compose-example.yaml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  elasticsearchn792:
+  elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
     ports:
       - 9200:9200
@@ -16,28 +16,22 @@ services:
       memlock:
         soft: -1
         hard: -1
-#  kibana:
-#    image: docker.elastic.co/kibana/kibana:7.9.2
-#    depends_on:
-#      - elasticsearch
-#    ports:
-#      - 5601:5601
-#  zookeeper:
-#    image: 'wurstmeister/zookeeper:latest'
-#    ports:
-#      - 2181:2181
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.9.2
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
   api:
     build: .
     command: >
       api
-      --es-host=elasticsearchn792:9200
+      --es-host=elasticsearch:9200
       --job-index=tradie-job.0
-      --note-index=job-note.2
-      --client-index=tradie-client
-#      --config-file=config.yaml
-#    depends_on:
-#      - elasticsearch
-#      - kafka
+      --note-index=job-note.0
+      --client-index=tradie-client.0
+    depends_on:
+      - elasticsearch
     ports:
       - 8080:8080
     volumes:
@@ -48,4 +42,4 @@ services:
 networks:
     default:
         external:
-            name: predicthq
+            name: tradienwlocal
